--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
     />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" type="text/html" />
   </head>
   <body>
     <app-root></app-root>
